ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doctor Care</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -243,7 +243,7 @@
 
         <div class="colunab">
           <img id="mulher-preta"
-            src="assets/mulher.png"
+            src="./assets/mulher.png"
             alt="Mulher negra de moletom verde sorrindo"
           />
 
@@ -340,7 +340,7 @@
         </div>
 
           <div class="colunab">
-            <img src="assets/doutor-feliz-segurando-prancheta-com-pacientes.png" alt="Doutor feliz segurando prancheta com pacientes">
+            <img src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png" alt="Doutor feliz segurando prancheta com pacientes">
           </div>
 
       </div>
@@ -375,7 +375,7 @@
             <a href="https://wa.me/5511956476865" target="_blank" class="button">AGENDE SUA CONSULTA</a>
         </div>
 
-          <div class="colunab"><img src="assets/homem-preto-usando-celular.png" alt="Homem preto sentado e mexendo no celular"></div>
+          <div class="colunab"><img src="./assets/homem-preto-usando-celular.png" alt="Homem preto sentado e mexendo no celular"></div>
         </div>
       </div>
     </section>
@@ -530,6 +530,6 @@
     </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
