--- a/index.html
+++ b/index.html
@@ -530,6 +530,6 @@
     </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
